# Smart-System-Health-AI-Assistant

./: .env  .gitignore  HELP.md  package-lock.json  pom.xml  pyproject.toml
Client/: index.html  package-lock.json  package.json  vite.config.js
Client/src/: App.jsx
Client/src/components/: HealthScore.jsx  IssueList.jsx  StatCard.jsx
Client/src/services/: api.js
python-agent/: main.py
src/main/java/com/example/demo/controller/: ApplicationHealth.java
src/main/java/com/systemhealth/: SystemHealthApplication.java
src/main/java/com/systemhealth/config/: AppConfig.java  CorsConfig.java  GlobalExceptionHandler.java  LoggingFilter.java  SecurityConfig.java  WebSocketConfig.java
src/main/java/com/systemhealth/controller/: ApplicationHealth.java  AuthController.java  SystemController.java
src/main/java/com/systemhealth/dto/: AuthResponse.java  LoginRequest.java  SignupRequest.java  SystemHealthResponse.java
src/main/java/com/systemhealth/entity/: Issue.java  UserEntity.java
src/main/java/com/systemhealth/repository/: IssueRepository.java  UserRepository.java
src/main/java/com/systemhealth/security/: JwtUtil.java
src/main/java/com/systemhealth/service/: AuthService.java  IssueService.java  SuggestionService.java  SystemHealthService.java
src/main/resources/: application.properties
src/test/java/com/systemhealth/: DemoApplicationTests.java
